--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
             <!-- Main Heading Starts -->
             <div class="main-head">
                 <h2 data-scroll-reveal="enter top and move 50px over 1.2s" class="MT40">
-                    Subscribe & Stay Updated</h2>
+                    Закажите звонок </h2>
+                <h5 data-scroll-reveal="enter bottom and move 50px over 1.4s">
+                    или звоните сами уже сейчас!</h5>
             </div>
             <!-- Main Heading Ends -->
             <!-- Form & Address Blocks Starts -->
@@ -150,12 +152,8 @@
                 <!-- Contact Form Ends -->
                 <!-- Contact Address Starts -->
                 <div data-scroll-reveal="enter right and move 50px over 1.8s" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <p>
-                        There are many variations of passages of Lorem Ipsum available, but the majority
-                        have suffered alteration in some form, by injected humour, or randomised words which
-                        don't look even slightly believable. If you are going to use a passage of Lorem
-                        Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle
-                        of text.</p>
+                    <p>Контакный телефон: <a href="tel:+79826892066">+79826892066</a></p>
+                    <p>Контакный email: <a href="mailto:nelsoneax@yandex.ru">nelsoneax@yandex.ru</a></p>
                 </div>
                 <!-- Contact Address Ends -->
             </div>
