--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <!--[if lt IE 9]>
-		<script src="js/ie8-responsive-file-warning.js"></script>
-	<![endif]-->
+        <script src="js/ie8-responsive-file-warning.js"></script>
+    <![endif]-->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -181,7 +181,12 @@
     <script src="js/scrollReveal.js" type="text/javascript"></script>
     <script src="js/jquery.downCount.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
-	
-	
+    <script type="text/javascript" src="//vk.com/js/api/openapi.js?153"></script>
+    <!-- VK Widget -->
+    <div id="vk_community_messages"></div>
+    <script type="text/javascript">
+        VK.Widgets.CommunityMessages("vk_community_messages", 157679627, {tooltipButtonText: "Есть вопрос?"});
+    </script>
+
 </body>
 </html>
