--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Переход и установка СПО в фирме и на предприятии">
     <meta name="author" content="NelsonEAX">
     <title>Скоро мы начнём! AvailSoft</title>
+    <link rel="shortcut icon" href="images/os.png">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!-- Google Web Fonts -->
@@ -92,10 +93,10 @@
                 <div class="main-head">
                     <h2 data-scroll-reveal="enter top and move 50px over 1.2s">О нас</h2>
 					<h5 data-scroll-reveal="enter bottom and move 50px over 1.4s">
-                        Мы – опытная и небольшая команда профессионалов</h5>
+                        Мы – опытная команда профессионалов</h5>
                     <br />
                     <p data-scroll-reveal="enter bottom and move 50px over 1.4s">
-                        которая поможет вашему бизнесу легализовать рабочие станции и сервера.
+                        которая поможет вашему бизнесу легализовать ПО на рабочих станциях и серверах.
                     </p>
                 </div>
                 <!-- Main Heading Ends -->
@@ -127,33 +128,17 @@
         <div class="container">
             <!-- Main Heading Starts -->
             <div class="main-head">
-                <h2 data-scroll-reveal="enter top and move 50px over 1.2s" class="MT40">
-                    Закажите звонок </h2>
-                <h5 data-scroll-reveal="enter bottom and move 50px over 1.4s">
-                    или звоните сами уже сейчас!</h5>
+                <h3 data-scroll-reveal="enter top and move 50px over 1.2s" class="MT40">
+                    Наши контакты:</h3>
             </div>
             <!-- Main Heading Ends -->
             <!-- Form & Address Blocks Starts -->
             <div class="row">
-                <!-- Contact Form Starts -->
-                <div data-scroll-reveal="enter left and move 50px over 1.6s" id="contact-area" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <form id="contact-form" class="contact-form" name="contact-form" method="post" action="contact.php">
-                    <div class="form-group">
-                        <input type="text" name="name" class="form-control" required placeholder="Введите имя">
-                    </div>
-                    <div class="form-group">
-                        <input type="tel" name="phone" class="form-control" required placeholder="Введите телефон">
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-info">Перезвонить!</button>
-                    </div>
-                    </form>
-                </div>
-                <!-- Contact Form Ends -->
                 <!-- Contact Address Starts -->
-                <div data-scroll-reveal="enter right and move 50px over 1.8s" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <p>Контакный телефон: <a href="tel:+79826892066">+79826892066</a></p>
-                    <p>Контакный email: <a href="mailto:nelsoneax@yandex.ru">nelsoneax@yandex.ru</a></p>
+                <div data-scroll-reveal="enter right and move 50px over 1.8s" class="text-center col-md-offset-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <p><span class="fa fa-mobile fa-lg" aria-hidden="true"></span>: <a href="tel:+79826892066">+79826892066</a></p>
+                    <p><span class="fa fa-envelope-o fa-lg" aria-hidden="true"></span>: <a href="mailto:nelsoneax@yandex.ru">nelsoneax@yandex.ru</a></p>
+                    <p><span class="fa fa-vk fa-lg" aria-hidden="true"></span>: <a href="https://vk.com/avail_soft" target="_blank">vk.com/avail_soft</a></p>
                 </div>
                 <!-- Contact Address Ends -->
             </div>
